--- a/trunk/examples/example3_files/tinymce/jscripts/tiny_mce/plugins/imgmap/popup.html
+++ b/trunk/examples/example3_files/tinymce/jscripts/tiny_mce/plugins/imgmap/popup.html
@@ -5,10 +5,11 @@
 	<!--[if gte IE 6]>
 	<script type="text/javascript" src="jscripts/excanvas.js"></script>
 	<![endif]-->
+	<script language="javascript" type="text/javascript" src="../../../../../../../imgmap.js"></script>
 	<script language="javascript" type="text/javascript" src="jscripts/functions.js"></script>
 	<link rel="stylesheet" href="css/imgmap.css" type="text/css">
 </head>
-<body id="imgmap" onload="tinyMCEPopup.executeOnLoad('init();');">
+<body id="imgmap" onload="delayedLoad()">
 	<form id="img_area_form">
 		<fieldset>
 			<legend>
@@ -70,8 +71,21 @@
 		
 	</form>
 
-<script language="javascript" type="text/javascript" src="../../../../../../../imgmap.js"></script>
+
 <script type="text/javascript">
+
+function delayedLoad(){
+	if(navigator.appName=="Microsoft Internet Explorer")
+	{
+	//ie load
+		tinyMCEPopup.onLoadEval = 'init();';
+	}
+	else
+	{
+		tinyMCEPopup.executeOnLoad('init();');
+	}
+	
+}
 
 function htmlShow() {
 	toggleFieldset(document.getElementById('fieldset_html'), 1);
