streamlined the updateAction() function. added extended_valid_elements for the img element

--- a/examples/example3.html
+++ b/examples/example3.html
@@ -24,7 +24,7 @@
 		external_link_list_url : "example_link_list.js",
 		external_image_list_url : "example_image_list.js",
 		media_external_list_url : "example_media_list.js",
-		extended_valid_elements : "map[id|name],area[shape|alt|coords|href|target],hr[class|width|size|noshade],font[face|size|color|style],span[class|align|style],p[lang]",
+		extended_valid_elements : "img[usemap|class|src|border=0|alt|title|hspace|vspace|width|height|align|onmouseover|onmouseout|name],map[id|name],area[shape|alt|coords|href|target],hr[class|width|size|noshade],font[face|size|color|style],span[class|align|style],p[lang]",
 		file_browser_callback : "fileBrowserCallBack",
 		paste_use_dialog : false,
 		theme_advanced_resizing : true,
