added building script removed more debug stuff

--- a/examples/example3_files/tinymce/jscripts/tiny_mce/plugins/imgmap/popup.html
+++ b/examples/example3_files/tinymce/jscripts/tiny_mce/plugins/imgmap/popup.html
@@ -16,8 +16,8 @@
 				<a onclick="toggleFieldset(this.parentNode.parentNode)">Image map areas</a>
 			</legend>
 			<div style="border-bottom: solid 1px #efefef">
-			<div id="button_container" style="float: left; border: solid 1px red">
-			<!-- buttons come here -->buttons
+			<div id="button_container" style="float: left;">
+			<!-- buttons come here -->
 			</div>
 			<div style="float: right; margin: 0 5px">
 				<select onchange="changelabeling(this)">
