some small fixes

--- a/examples/example3_files/tinymce/jscripts/tiny_mce/plugins/imgmap/popup.html
+++ b/examples/example3_files/tinymce/jscripts/tiny_mce/plugins/imgmap/popup.html
@@ -3,11 +3,12 @@
 	<title>{$lang_imgmap_title}</title>
 	<script language="javascript" type="text/javascript" src="../../tiny_mce_popup.js"></script>
 	<!--[if gte IE 6]>
-	<script type="text/javascript" src="jscripts/excanvas.js"></script>
+	<script language="javascript" type="text/javascript" src="jscripts/excanvas.js"></script>
 	<![endif]-->
 	<script language="javascript" type="text/javascript" src="../../../../../../../imgmap.js"></script>
 	<script language="javascript" type="text/javascript" src="jscripts/functions.js"></script>
-	<link rel="stylesheet" href="css/imgmap.css" type="text/css">
+	<link rel="stylesheet" href="css/imgmap.css" type="text/css"/>
+	<meta http-equiv="imagetoolbar" content="no"/>
 </head>
 <body id="imgmap" onload="delayedLoad()">
 	<form id="img_area_form">
