--- a/trunk/examples/example5.html
+++ b/trunk/examples/example5.html
@@ -1,18 +1,11 @@
 <html>
 <head>
-<title>Online Image Map Editor - Example 1</title>
+<title>Online Image Map Editor - Example 5</title>
 <link rel="stylesheet" href="example1_files/imgmap.css" type="text/css">
-<!--[if gte IE 6]>
-<script language="javascript" type="text/javascript" src="../excanvas.js"></script>
-<![endif]-->
 </head>
 <body>
 <p style="font-size: 12px; font-weight: bold">
-Example 1 shows how to use the imgmap component in a complete imagemap editor application. This example is 
-functionally equivalent to the online editor found at
-<a href="http://www.maschek.hu/imagemap/imgmap">http://www.maschek.hu/imagemap/imgmap</a>.<br/>
-To use the uploader component ("An image on your computer") you will need to open the example from a php-enabled webserver.
-
+Example 5 shows how to register custom callback functions on imgmap events. Try to click on the href input field of any area, to get an example why is it useful.
 </p>
 	<form id="img_area_form">
 		<fieldset>
@@ -101,18 +94,45 @@ To use the uploader component ("An image on your computer") you will need to ope
 			
 			<textarea id="html_container"></textarea></div>
 		</fieldset>
+		<fieldset id="fieldset_log">
+			<legend>
+				<a onclick="toggleFieldset(this.parentNode.parentNode)">Events</a>
+			</legend>
+			<div>
+			Events of the imgmap editor:<br/>
+			<textarea id="log_container" style="width: 100%; height: 150px;"></textarea></div>
+		</fieldset>
 	</form>
 
-<script type="text/javascript" src="../imgmap.js"></script>
+<script type="text/javascript" src="../imgmap.js?nocache=ex5"></script>
 <script type="text/javascript">
 //instantiate the imgmap component, setting up some basic config values
 var myimgmap = new imgmap({
 mode : "editor",
 button_container: document.getElementById('button_container'),
 imgroot: 'example1_files/',
-buttons : ['add','delete','preview','html'],
+buttons : ['add','delete','preview','html','clipboard'],
 custom_callbacks : {
-	'onHtml' : function() {htmlShow();}
+	'onPreview' : function(){mylog('onPreview');},
+	'onClipboard' : function(){mylog('onClipboard');},
+	'onHtml' : function(){mylog('onHtml');htmlShow();},
+	'onAddArea' : function(){mylog('onAddArea');},
+	'onRemoveArea' : function(){mylog('onRemoveArea');},
+	'onDrawArea' : function(){mylog('onDrawArea');},
+	'onResizeArea' : function(){mylog('onResizeArea');},
+	'onRelaxArea' : function(){mylog('onRelaxArea');},
+	'onFocusArea' : function(){mylog('onFocusArea');},
+	'onBlurArea' : function(){mylog('onBlurArea');},
+	'onMoveArea' : function(){mylog('onMoveArea');},
+	'onSelectRow' : function(e){
+		mylog('onSelectRow');
+		console.log(e);
+		if (document.all) e = window.event;
+		onSelectRow(e);
+		},
+	'onLoadImage' : function(){mylog('onLoadImage');alert('image loaded');},
+	'onSetMap' : function(){mylog('onSetMap');},
+	'onGetMap' : function(){mylog('onGetMap');}
 },
 pic_container: document.getElementById('pic_container'),
 html_container: document.getElementById('html_container'),
@@ -121,6 +141,9 @@ form_container: document.getElementById('form_container'),
 bounding_box : true
 });
 
+function mylog(msg) {
+	document.getElementById('log_container').innerHTML+= msg + "\n";
+}
 
 function htmlShow() {
 	toggleFieldset(document.getElementById('fieldset_html'), 1);
@@ -151,6 +174,24 @@ function toggleFieldset(fieldset, on) {
 		else {
 			fieldset.className = 'fieldset_off';
 		}
+	}
+}
+
+function onSelectRow(e) {
+	//not yet in FFX :S
+	if (document.all) {
+		if (!window.event) return;
+		var obj = window.event.srcElement;
+	}
+	else {
+		if (!e) return;
+		var obj = e.currentTarget;
+	}
+	alert(obj.name);
+	//console.log(obj);
+	if (typeof obj != 'undefined')
+	if (obj.name == 'img_href') {
+		window.open('example5_files/url.html');
 	}
 }
 
