alfonso's latest improvements + minor bugfixes

--- a/examples/example6.html
+++ b/examples/example6.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Online Image Map Editor - Example 6</title>
-<link rel="stylesheet" href="example2_files/imgmap.css" type="text/css">
+<link rel="stylesheet" href="example1_files/imgmap.css" type="text/css">
 <!-- FCKeditor -->
 <script type="text/javascript" src="example6_files/fckeditor/fckeditor.js"></script>
 <!-- /FCKeditor -->
@@ -9,7 +9,8 @@
 <body>
 <form method="post" action="">
 <p style="font-size: 12px; font-weight: bold">
-Example 6 shows how to use the imgmap with FCKeditor.
+Example 6 shows how to use the imgmap with FCKeditor.<br>
+Note: the image might dissapear in Firefox 2.0.0.8 due to <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=400421">bug 200421</a> (will be fixed in 2.0.0.9)
 </p>
 
 <script type="text/javascript">
