--- a/examples/example8.html
+++ b/examples/example8.html
@@ -8,42 +8,29 @@
 	tinyMCE.init({
 		mode : "textareas",
 		theme : "advanced",
-		plugins : "table,save,advhr,advimage,imgmap,advlink,emotions,iespell,insertdatetime,preview,zoom,media,searchreplace,print,contextmenu,paste,directionality,fullscreen",
+		plugins : "imgmap,safari,spellchecker,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template,pagebreak,imagemanager,filemanager",
 		theme_advanced_buttons1_add_before : "save,newdocument,separator",
 		theme_advanced_buttons1_add : "fontselect,fontsizeselect",
-		theme_advanced_buttons2_add : "separator,insertdate,inserttime,preview,zoom,separator,forecolor,backcolor",
+		theme_advanced_buttons2_add : "separator,insertdate,inserttime,preview,separator,forecolor,backcolor",
 		theme_advanced_buttons2_add_before: "cut,copy,paste,pastetext,pasteword,separator,search,replace,separator",
 		theme_advanced_buttons3_add_before : "tablecontrols,separator",
 		theme_advanced_buttons3_add : "emotions,iespell,media,advhr,separator,print,separator,ltr,rtl,imgmap",
 		theme_advanced_toolbar_location : "top",
 		theme_advanced_toolbar_align : "left",
 		theme_advanced_statusbar_location : "bottom",
-		content_css : "example_word.css",
-	    plugi2n_insertdate_dateFormat : "%Y-%m-%d",
-	    plugi2n_insertdate_timeFormat : "%H:%M:%S",
-		external_link_list_url : "example_link_list.js",
-		external_image_list_url : "example_image_list.js",
-		media_external_list_url : "example_media_list.js",
+		content_css : "/example_data/example_full.css",
+	    plugin_insertdate_dateFormat : "%Y-%m-%d",
+	    plugin_insertdate_timeFormat : "%H:%M:%S",
+		external_link_list_url : "example_data/example_link_list.js",
+		external_image_list_url : "example_data/example_image_list.js",
+		flash_external_list_url : "example_data/example_flash_list.js",
+		template_external_list_url : "example_data/example_template_list.js",
 		extended_valid_elements : "img[usemap|class|src|border=0|alt|title|hspace|vspace|width|height|align|onmouseover|onmouseout|name],map[id|name],area[shape|alt|coords|href|target],hr[class|width|size|noshade],font[face|size|color|style],span[class|align|style],p[lang]",
-		file_browser_callback : "fileBrowserCallBack",
-		paste_use_dialog : false,
-		theme_advanced_resizing : true,
 		theme_advanced_resize_horizontal : false,
-		theme_advanced_link_targets : "_something=My somthing;_something2=My somthing2;_something3=My somthing3;",
-		paste_auto_cleanup_on_paste : true,
-		paste_convert_headers_to_strong : false,
-		paste_strip_class_attributes : "all",
-		paste_remove_spans : false,
-		paste_remove_styles : false		
+		theme_advanced_resizing : true,
+		apply_source_formatting : true,
+		spellchecker_languages : "+English=en,Danish=da,Dutch=nl,Finnish=fi,French=fr,German=de,Italian=it,Polish=pl,Portuguese=pt,Spanish=es,Swedish=sv"
 	});
-
-	function fileBrowserCallBack(field_name, url, type, win) {
-		// This is where you insert your custom filebrowser logic
-		alert("Filebrowser callback: field_name: " + field_name + ", url: " + url + ", type: " + type);
-
-		// Insert new URL, this would normaly be done in a popup
-		win.document.forms[0].elements[field_name].value = "someurl.htm";
-	}
 </script>
 <!-- /TinyMCE -->
 </head>
