first signs of css output

--- a/examples/example1.html
+++ b/examples/example1.html
@@ -67,6 +67,11 @@ To use the uploader component ("An image on your computer") you will need to ope
 				<option value='2'>200%</option>
 				<option value='3'>300%</option>
 				</select>
+				Output: 
+				<select id="dd_output">
+				<option value='imagemap'>Standard imagemap</option>
+				<option value='css'>CSS imagemap</option>
+				</select>
 			</div>
 			<div style="float: right; margin: 0 5px">
 				<select onchange="changelabeling(this)">
